syntax = "proto3";

package api.packageCard.v1;
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "studyRoomGo/api/packageCard/v1;v1";
option java_multiple_files = true;
option java_package = "api.packageCard.v1";

service PackageCard {
  rpc Create(CreateRequest) returns (CreateReply);
  rpc Update(UpdateRequest) returns (UpdateReply);
  rpc Delete(DeleteRequest) returns (DeleteReply);
  rpc Get(GetRequest) returns (DataReply) {
    option (google.api.http) = {
      get : "/package_card/v1/package_card/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description : "根据id获取";
  summary:
    "获取套餐卡";
  };
};
rpc Find(FindRequest) returns (DataReply) {
  option (google.api.http) = {
    get : "/package_card/v1/find"
  };
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
    description : "根据字段-值获取";
summary:
  "自定义获取套餐卡";
};
}
;
rpc List(ListRequest) returns (ListReply) {
  option (google.api.http) = {
    get : "/package_card/v1/list"
  };
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
    description : "获取全部";
summary:
  "获取套餐卡列表";
};
}
;
rpc Search(SearchRequest) returns (ListReply) {
  option (google.api.http) = {
    get : "/package_card/v1/search"
  };
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
    description : "根据字段搜索";
summary:
  "搜索套餐卡列表";
};
}
;
rpc BuyCard(CardRequest) returns (CardReply) {
  option (google.api.http) = {
    post : "/package_card/v1/buyCard",
    body : "*"
  };
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
    description : "购买套餐卡";
summary:
  "购买套餐卡";
};
}
;
rpc MemberCardActive(CardRequest) returns (CardReply) {
  option (google.api.http) = {
    post : "/package_card/v1/member_card_active",
    body : "*"
  };
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
    description : "会员套餐卡激活";
summary:
  "会员套餐卡激活";
};
}
;
rpc FindBuyLog(FindRequest) returns (BuyLogDataReply) {
  option (google.api.http) = {
    get : "/package_card/v1/findBuyLog"
  };
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
    description : "根据字段-值获取日志";
summary:
  "自定义获取套餐卡日志";
};
}
;
}

message CreateRequest {}
message CreateReply {}

message UpdateRequest {}
message UpdateReply {}

message DeleteRequest {}
message DeleteReply {}

message GetRequest { int64 id = 1; }

message FindRequest {
  string key = 1;
  string value = 2;
}

message ListRequest {}

message SearchRequest {
  string useShop = 1
      [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description : "shopId|0|",
        example : "shopId|0|",
        default : "shopId|0|"
      } ];
  string useSeat = 2;
  int32 typePackage = 3;
  int32 typeCard = 4;
  int32 typeSale = 5;
  int32 status = 6;
  int32 sort = 7;
}

message DataReply {
  int32 code = 1;
  string msg = 2;
  Data data = 3;
}
message ListReply {
  int32 code = 1;
  string msg = 2;
  repeated Data data = 3;
}

message Data {
  int64 id = 1;
  string name = 2;
  int32 typePackage = 3;
  int32 typeCard = 4;
  int32 typeSale = 5;
  int32 status = 6;
  float price = 7;
  float oriPrice = 8;
  int64 validDay = 9;
  int64 activeLimit = 10;
  int64 buyLimit = 11;
  string useShop = 12;
  string useSeat = 13;
  string useTime = 14;
  int64 bookingDay = 15;
  int64 bookingMinute = 16;
  int64 bookingMinutePer = 17;
  int64 bookingMinuteMax = 18;
  int64 bookingMinuteMin = 19;
  int32 canBalance = 20;
  int64 sort = 21;
  string remark = 22;
}
//    kratos proto server api/packageCard/v1/package_card.proto -t
//    internal/service

message CardRequest {
  int64 cardId = 1;
  string activeDate = 2;
  string activeTime = 3;
}

message CardReply {
  int32 code = 1;
  string msg = 2;
}

message BuyLogDataReply {
  int32 code = 1;
  string msg = 2;
  BuyLogData data = 3;
}

message BuyLogData {
  int64 id = 1;
  string orderNo = 2;
  int64 memberId = 3;
  int64 packageCardId = 4;
  int64 mpId = 5;
}